retrieve_ENO_DEV1/objects/Wig__c.object
<CustomObject>
    <fields>
        <fullName>Across_Nape_in_cm__c</fullName>
        <label>Across Nape (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Across_Occipital_Bone_in_cm__c</fullName>
        <label>Across Occipital Bone (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Performer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Performer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Wigs (Active Performer)</relationshipLabel>
        <relationshipName>Wigs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Any_Specific_Style_Other__c</fullName>
        <label>Any Specific Style Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Specific_Style__c</fullName>
        <label>Any Specific Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Toupee</fullName>
                </value>
                <value>
                    <fullName>Bob</fullName>
                </value>
                <value>
                    <fullName>No specific style</fullName>
                </value>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approx_Age__c</fullName>
        <formula>IF(
    NOT(ISNULL(Date_of_Creation__c)), /* Condition to check to make sure Date_of_Creation__c is not null */
    TEXT(FLOOR((TODAY()-Date_of_Creation__c)/365.2425)) &amp; &quot; year(s) &quot; &amp; 
    TEXT(FLOOR(MOD((TODAY()-Date_of_Creation__c),365.2425)/30)) &amp; &quot; month(s)&quot;, /* Value IF True */
    &quot;&quot; /* Value IF False */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approx Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Size__c</fullName>
        <label>Block Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>52</fullName>
                </value>
                <value>
                    <fullName>54</fullName>
                </value>
                <value>
                    <fullName>56</fullName>
                </value>
                <value>
                    <fullName>58</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circumference_in_cm__c</fullName>
        <label>Circumference (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Colour_Other__c</fullName>
        <label>Colour Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Light Blonde</fullName>
                </value>
                <value>
                    <fullName>Dark Blonde</fullName>
                </value>
                <value>
                    <fullName>Light Brown</fullName>
                </value>
                <value>
                    <fullName>Medium Brown</fullName>
                </value>
                <value>
                    <fullName>Dark Brown</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Salt &amp; Pepper</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Useable</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Requires Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_to_Make_Wig__c</fullName>
        <label>Cost to Make Wig</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <label>Current Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <label>Date Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Creation__c</fullName>
        <inlineHelpText>Date of Creation (if known)</inlineHelpText>
        <label>Date of Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_Of_Any_Repair_Required__c</fullName>
        <label>Details Of Any Repair Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directions__c</fullName>
        <label>Directions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ear_to_Ear_around_Back_in_cm__c</fullName>
        <label>Ear to Ear around Back (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ear_to_Ear_over_Top_in_cm__c</fullName>
        <label>Ear to Ear over Top (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ear_to_Nape_Left_in_cm__c</fullName>
        <label>Ear to Nape Left (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ear_to_Nape_Right_in_cm__c</fullName>
        <label>Ear to Nape Right (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ear_to_Nape_in_cm__c</fullName>
        <label>Ear to Nape (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elastic_Piece__c</fullName>
        <label>Elastic / Piece?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Elastic</fullName>
                    <isActive>false</isActive>
                    <label>Elastic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foundation_Material__c</fullName>
        <label>Foundation Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asian Lace</fullName>
                </value>
                <value>
                    <fullName>Terylene</fullName>
                </value>
                <value>
                    <fullName>Swiss Front Lace</fullName>
                </value>
                <value>
                    <fullName>Caul Net</fullName>
                </value>
                <value>
                    <fullName>Elastic Webbing</fullName>
                </value>
                <value>
                    <fullName>Thermo Lace</fullName>
                </value>
                <value>
                    <fullName>30 Denier Swiss Lace</fullName>
                    <isActive>false</isActive>
                    <label>30 Denier Swiss Lace</label>
                </value>
                <value>
                    <fullName>40 Denier Swiss Lace</fullName>
                    <isActive>false</isActive>
                    <label>40 Denier Swiss Lace</label>
                </value>
                <value>
                    <fullName>Fine Lace</fullName>
                    <isActive>false</isActive>
                    <label>Fine Lace</label>
                </value>
                <value>
                    <fullName>HD Swiss Lace</fullName>
                    <isActive>false</isActive>
                    <label>HD Swiss Lace</label>
                </value>
                <value>
                    <fullName>Hard Front</fullName>
                    <isActive>false</isActive>
                    <label>Hard Front</label>
                </value>
                <value>
                    <fullName>Lace</fullName>
                    <isActive>false</isActive>
                    <label>Lace</label>
                </value>
                <value>
                    <fullName>Machine</fullName>
                    <isActive>false</isActive>
                    <label>Machine</label>
                </value>
                <value>
                    <fullName>No Front</fullName>
                    <isActive>false</isActive>
                    <label>No Front</label>
                </value>
                <value>
                    <fullName>Pull-on Machine Weft</fullName>
                    <isActive>false</isActive>
                    <label>Pull-on Machine Weft</label>
                </value>
                <value>
                    <fullName>Pull-on with Lace Front</fullName>
                    <isActive>false</isActive>
                    <label>Pull-on with Lace Front</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foundation_Style__c</fullName>
        <label>Foundation Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Circular Crown</fullName>
                </value>
                <value>
                    <fullName>Darted Nape</fullName>
                </value>
                <value>
                    <fullName>Open Nape / Toupee</fullName>
                </value>
                <value>
                    <fullName>Piece / Diamond Mesh / Switch</fullName>
                </value>
                <value>
                    <fullName>Backfall / 3/4</fullName>
                </value>
                <value>
                    <fullName>Bought-in</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ENO/Campbell Young</fullName>
                    <isActive>false</isActive>
                    <label>ENO/Campbell Young</label>
                </value>
                <value>
                    <fullName>Old Style</fullName>
                    <isActive>false</isActive>
                    <label>Old Style</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foundation__c</fullName>
        <label>Foundation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fringe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fringe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_Material__c</fullName>
        <label>Front Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>40 Denier Swiss Lace</fullName>
                </value>
                <value>
                    <fullName>30 Denier Swiss Lace</fullName>
                </value>
                <value>
                    <fullName>HD Swiss Lace</fullName>
                </value>
                <value>
                    <fullName>Asian Lace</fullName>
                </value>
                <value>
                    <fullName>Hard Front</fullName>
                </value>
                <value>
                    <fullName>No Front</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Front_to_Nape_in_cm__c</fullName>
        <label>Front to Nape (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hair_Colouring__c</fullName>
        <label>Hair Colouring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hair_Density__c</fullName>
        <label>Hair Density</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Balding</fullName>
                </value>
                <value>
                    <fullName>Sparse</fullName>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Thick</fullName>
                </value>
                <value>
                    <fullName>Receding</fullName>
                    <isActive>false</isActive>
                    <label>Receding</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hair_Length__c</fullName>
        <label>Hair Length (in inches)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Short</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>Extra Long</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hair_Selection__c</fullName>
        <label>Hair Selection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hair_Texture__c</fullName>
        <label>Hair Texture</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Straight</fullName>
                </value>
                <value>
                    <fullName>Wavy</fullName>
                </value>
                <value>
                    <fullName>Curly</fullName>
                </value>
                <value>
                    <fullName>Coily</fullName>
                </value>
                <value>
                    <fullName>Curly/Pre-Curled</fullName>
                    <isActive>false</isActive>
                    <label>Curly/Pre-Curled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hair_Type_Other__c</fullName>
        <label>Hair Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hair_Type__c</fullName>
        <label>Hair Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Human</fullName>
                </value>
                <value>
                    <fullName>Synthetic</fullName>
                </value>
                <value>
                    <fullName>Yak</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(NOT(ISBLANK(Image_URL__c)), IMAGE(Image_URL__c, Wig_Label_Ref__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_is_only_a_Prop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Item is only a Prop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knotting_Back__c</fullName>
        <label>Knotting – Back</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Knotting_Break_or_parting__c</fullName>
        <label>Knotting – Break or parting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Knotting_Front__c</fullName>
        <label>Knotting - Front</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Knotting_Nape__c</fullName>
        <label>Knotting – Nape</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Layered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Layered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Performer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Performer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Wigs</relationshipLabel>
        <relationshipName>Wigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parting__c</fullName>
        <label>Parting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Centre</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performer_Type__c</fullName>
        <formula>TEXT(Original_Performer__r.Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_curled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-curled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QR_Code__c</fullName>
        <formula>IMAGE(&quot;https://chart.googleapis.com/chart?cht=qr&amp;chs=200x200&amp;chl=&quot; +
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Id ,
Name,
200,
200
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost__c</fullName>
        <label>Replacement Cost</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unisex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-Stage</fullName>
                </value>
                <value>
                    <fullName>Cage</fullName>
                </value>
                <value>
                    <fullName>Show Box</fullName>
                </value>
                <value>
                    <fullName>Performer Bag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temple_to_Temple_Back_in_cm__c</fullName>
        <label>Temple to Temple Back (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temple_to_Temple_Front_in_cm__c</fullName>
        <label>Temple to Temple Front (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tinted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tinted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wig_Label_Ref_Number_Colour__c</fullName>
        <inlineHelpText>Red (all except Chorus/Extra Chorus)
Black (Chorus)</inlineHelpText>
        <label>Wig Label Ref Number Colour</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <default>true</default>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wig_Label_Ref_Number__c</fullName>
        <inlineHelpText>Wig Label Number</inlineHelpText>
        <label>Wig Label Ref Number</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wig_Label_Ref__c</fullName>
        <formula>IF(ISPICKVAL(Wig_Label_Ref_Number_Colour__c, &apos;Red&apos;),&apos;🔴&apos;,&apos;⚫️&apos;) +  Wig_Label_Ref_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wig Label Ref</label>
        <type>Text</type>
    </fields>
    <label>Wig</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Wig Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>